--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ body {font-size:16px;}
         <label>Contact No: +91-8943565971 , +91-9447190537</label>
       </div>
       <div class="w3-section">
-        <label>Email : alphairisindia@gmail.com</label>
+        <label>Email : deltaglassindia@gmail.com</label>
         
       </div>
       <div class="w3-section">
