--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ body {font-size:16px;}
     incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
     </p> -->
     <ul style="margin-left:-20px">
-    <li>Integrating creativity and skill to fabricate safety glass,metal,wood to the making of architectural units.</li><br/>
+    <li>Integrating creativity and skill to fabricate safety glass,metal,wood to the making of architectural units in multiple finishes of choice.</li><br/>
     <li>Transforming interior spaces to perform to the fullest, clubbed with aesthetic elements.</li><br/>
     <li>Parent firm M/S Alpha Iris, undertaking turnkey interior project works since 2005.</li><br/>
     <li>Managed by interior designer Jacob Martin.</li>
@@ -77,7 +77,7 @@ body {font-size:16px;}
     <li>Design and layout with transparent quote.</li><br/>
     <li>Safety Glass Works - Door,Partition,Shower Cabin,Stair Rail,Pergola,Hand Rail,Glass Laminative Works.</li><br/>
     <li>Infrastructural Works - Artificial Ceiling,Suspended Stairway,Surface Cladding,Sliding Roofing System,Joinery & Carpentry,Canopy,Metal and Wooden Works.</li><br/>
-    <li>Space Utility Units - Kitchen Cabinet,Wardrobe,Storage Cabinet,Customized Bathroom,Living Room/Bedroom Decor,Artefacts.</li><br/>
+    <li>Space Utility Units - Kitchen Cabinet,Wardrobe,Storage Cabinet,Customized Bathroom,Furniture.</li><br/>
     </ul>
   </div>
   
