--- a/index.html
+++ b/index.html
@@ -83,24 +83,25 @@ body {font-size:16px;}
   
   <!-- Photo grid (modal) -->
   
-
-    <div class="w3-container" style="margin-top:50px" id="gallery">
+  <div class="w3-container" style="margin-top:50px" id="gallery">
     <h1 class="w3-xxxlarge w3-text-red"><b>Gallery.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
     </div>
   <div class="w3-row-padding">
     <div class="w3-half">
       <img src="images/GlassFixedPergola.jpg" style="width:100%"  >
-      <img src="images/Livingspaeexvgnce.jpg" style="width:100%"  >
-      <img src="images/Infradoors.jpg" style="width:100%"  >
+      <img src="images/slidingdoor.jpg" style="width:100%"  >
+      <img src="images/showercabin.jpg" style="width:100%"  >
       <img src="images/Infrasuspendedstairs.jpg" style="width:100%"  >
-      <img src="images/Woodenstairs.jpg" style="width:100%" > 
+      <img src="images/Woodenstairsnew.jpg" style="width:100%" > 
       <img src="images/Infrasliding.jpg" style="width:100%" > 
+      <img src="images/bathroom.jpg" style="width:100%" > 
+      <img src="images/Stairways.jpg" style="width:100%" > 
       <img src="images/Glass-Laminative works.jpg" style="width:100%" > 
-      <img src="images/Glasstairs.jpg" style="width:100%" > 
     </div>
 
     <div class="w3-half">
+     <img src="images/kitchencab.jpg" style="width:100%" >
       <img src="images/Kitchenceilinng.jpg" style="width:100%" >
       <img src="images/ExclusiveFalseceiling.jpg" style="width:100%">
       <img src="images/InfraBedroom.jpg" style="width:100%" >
@@ -110,6 +111,8 @@ body {font-size:16px;}
       <img src="images/GlassHandrails.jpg" style="width:100%" >
     </div>
   </div>
+
+    
 
   <!-- Modal for full size images on click-->
   <div id="modal01" class="w3-modal w3-black" style="padding-top:0" onclick="this.style.display='none'">
