--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@ body {font-size:16px;}
     <h3 class="w3-padding-64"><b>Delta<br>Glass</b></h3>
   </div>
   <div class="w3-bar-block">
-    <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Profile</a> 
-    <a href="#services" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Services</a> 
+    <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">About Us</a> 
+    <a href="#services" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Profile</a>
+    <a href="#workprofile" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Work Profile</a> 
     <a href="#gallery" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Gallery</a> 
     <!-- <a href="#designers" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Designers</a>  -->
     <!-- <a href="#packages" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Packages</a>  -->
@@ -47,38 +48,73 @@ body {font-size:16px;}
   <!-- Header -->
   <div class="w3-container" style="margin-top:80px">
     <h1 class="w3-jumbo"><b>Delta Glass</b></h1>
-    <h3><b>Safety Glass and Infrastructural Elegance</b></h3>
+    <h3><b>Safety Glass Works</b></h3>
   </div>
 
 
    <div class="w3-container" style="margin-top:20px">
-    <h1 class="w3-xxxlarge w3-text-red"><b>Profile.</b></h1>
+    <h1 class="w3-xxxlarge w3-text-red"><b>About Us.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
-    <!-- <p>Hello</p> -->
-    <!-- <p>Some text about our services - what we do and what we offer. We are lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
-    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    </p> -->
     <ul style="margin-left:-20px">
-    <li>Integrating creativity and skill to fabricate safety glass,metal,wood to the making of architectural units in multiple finishes of choice.</li><br/>
-    <li>Transforming interior spaces to perform to the fullest, clubbed with aesthetic elements.</li><br/>
-    <li>Parent firm M/S Alpha Iris, undertaking turnkey interior project works since 2005.</li><br/>
-    <li>Managed by interior designer Jacob Martin.</li>
+    <li>Parent Firm - M/S Alpha Iris.</li><br/>
+    <li>Undertaking turnkey interior and exterior project works since 2004.</li>
     </ul>
   </div>
   
 
-   <!-- Services -->
+   <!-- Profile -->
   <div class="w3-container" id="services" style="margin-top:50px">
-    <h1 class="w3-xxxlarge w3-text-red"><b>Services.</b></h1>
+    <h1 class="w3-xxxlarge w3-text-red"><b>Profile.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
     <ul style="margin-left:-20px">
-    <li>Expert evaluation of site to give the best proposal for finished spaces and surfaces.</li><br/>
+    <li>Covers all segments of safety glass applications.</li><br/>
     <li>Design and layout with transparent quote.</li><br/>
-    <li>Safety Glass Works - Door,Partition,Shower Cabin,Stair Rail,Pergola,Hand Rail,Glass Laminative Works.</li><br/>
-    <li>Infrastructural Works - Artificial Ceiling,Suspended Stairway,Surface Cladding,Sliding Roofing System,Joinery & Carpentry,Canopy,Metal and Wooden Works.</li><br/>
-    <li>Space Utility Units - Kitchen Cabinet,Wardrobe,Storage Cabinet,Customized Bathroom,Furniture.</li><br/>
+    <li>Employing skilled labourers equipped with provisional tools and equipments.</li>
     </ul>
+  </div>
+
+  <div class="w3-container" id="workprofile" style="margin-top:50px">
+    <h1 class="w3-xxxlarge w3-text-red"><b>Work Profile.</b></h1>
+    <hr style="width:50px;border:5px solid red" class="w3-round">
+    <h3 class="w3-xxxsmall w3-text-red">Work Format</h3>
+    <ul style="margin-left:-20px">
+    <li>Evaluation of site to give the right design,drawings and specifications.</li><br/>
+    <li>Opting the right type of safety glass with appropriate thickness for each specific segment.</li><br/>
+    <li>Quote concludes with details of concerned accessories with specific guarantee.</li>
+    </ul>
+
+    <h3 class="w3-xxxsmall w3-text-red">Infrastructural</h3>
+    <ul style="margin-left:-20px">
+    <li>Undertaking MS,SS,aluminium,concrete,wood and other concerned surfaces-fixtures.</li><br/>
+    <li>Expertise in premium fabricational work of handrail and stair rail.</li>
+    </ul>
+
+
+    <h3 class="w3-xxxsmall w3-text-red">We Fabricate</h3>
+    <ul style="margin-left:-20px">
+    <li>Door,Partition,Shower Cabin,Pergola,Canopy,Ceiling,Stair Rail,Hand Rail,Glazing and Cladding.</li><br/>
+    <li>Toughened/Tempered,laminated,annealed,semi-tempered,ceramic and bent glass are the different types of safety glass commonly used.</li>
+    </ul>
+
+
+    <h3 class="w3-xxxsmall w3-text-red">Glass Finishing</h3>
+    <ul style="margin-left:-20px">
+    <li>UV Printed images.</li><br/>
+    <li>Etching works.</li><br/>
+    <li>Acrylic and Vinyl laminations.</li><br/>
+    <li>Laminative Stickers.</li>
+    </ul>
+
+
+
+    <h3 class="w3-xxxsmall w3-text-red">Decorative Work</h3>
+    <ul style="margin-left:-20px">
+    <li>Image on various boards with glass and frame.</li><br/>
+    <li>Customized artwork on paper,canvas and other mediums.</li><br/>
+    <li>Luminous crystal signage works.</li>
+    </ul>
+
+
   </div>
   
   <!-- Photo grid (modal) -->
@@ -95,21 +131,22 @@ body {font-size:16px;}
       <img src="images/showercabin.jpg" style="width:100%"  >
       <img src="images/Infrasuspendedstairs.jpg" style="width:100%"  >
       <img src="images/Woodenstairsnew.jpg" style="width:100%" > 
-      <img src="images/Infrasliding.jpg" style="width:100%" > 
-      <img src="images/bathroom.jpg" style="width:100%" > 
-      <img src="images/Stairways.jpg" style="width:100%" > 
-      <img src="images/Glass-Laminative works.jpg" style="width:100%" > 
+      <!-- <img src="images/Infrasliding.jpg" style="width:100%" >  -->
+      <!-- <img src="images/bathroom.jpg" style="width:100%" >  -->
+      
     </div>
 
     <div class="w3-half">
-     <img src="images/kitchencab.jpg" style="width:100%" >
-      <img src="images/Kitchenceilinng.jpg" style="width:100%" >
-      <img src="images/ExclusiveFalseceiling.jpg" style="width:100%">
-      <img src="images/InfraBedroom.jpg" style="width:100%" >
-      <img src="images/Woodenceiling.jpg" style="width:100%" >    
+     <!-- <img src="images/kitchencab.jpg" style="width:100%" > -->
+      <!-- <img src="images/Kitchenceilinng.jpg" style="width:100%" > -->
+      <!-- <img src="images/ExclusiveFalseceiling.jpg" style="width:100%"> -->
+      <!-- <img src="images/InfraBedroom.jpg" style="width:100%" > -->
+      <!-- <img src="images/Woodenceiling.jpg" style="width:100%" >  --> 
       <img src="images/InfraBathro.jpg" style="width:100%" >  
       <img src="images/Infrabathrooma.jpg" style="width:100%" >  
       <img src="images/GlassHandrails.jpg" style="width:100%" >
+      <img src="images/Stairways.jpg" style="width:100%" > 
+      <img src="images/Glass-Laminative works.jpg" style="width:100%" > 
     </div>
   </div>
 
