--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@ body {font-size:16px;}
   </div>
   <div class="w3-bar-block">
     <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">About Us</a> 
-    <a href="#services" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Profile</a>
     <a href="#workprofile" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Work Profile</a> 
     <a href="#gallery" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Gallery</a> 
     <!-- <a href="#designers" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Designers</a>  -->
@@ -56,22 +55,12 @@ body {font-size:16px;}
     <h1 class="w3-xxxlarge w3-text-red"><b>About Us.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
     <ul style="margin-left:-20px">
-    <li>Parent Firm - M/S Alpha Iris.</li><br/>
-    <li>Undertaking turnkey interior and exterior project works since 2004.</li>
-    </ul>
-  </div>
-  
-
-   <!-- Profile -->
-  <div class="w3-container" id="services" style="margin-top:50px">
-    <h1 class="w3-xxxlarge w3-text-red"><b>Profile.</b></h1>
-    <hr style="width:50px;border:5px solid red" class="w3-round">
-    <ul style="margin-left:-20px">
-    <li>Covers all segments of safety glass applications.</li><br/>
-    <li>Design and layout with transparent quote.</li><br/>
+    <li>Managed by parent firm M/S Alpha Iris undertaking turnkey interior design project works since 2004.</li><br/>
+    <li>Technical know how of variant type safety glass applications with allied structural frame and frameless glass works.</li><br/>
     <li>Employing skilled labourers equipped with provisional tools and equipments.</li>
     </ul>
   </div>
+  
 
   <div class="w3-container" id="workprofile" style="margin-top:50px">
     <h1 class="w3-xxxlarge w3-text-red"><b>Work Profile.</b></h1>
@@ -80,20 +69,21 @@ body {font-size:16px;}
     <ul style="margin-left:-20px">
     <li>Evaluation of site to give the right design,drawings and specifications.</li><br/>
     <li>Opting the right type of safety glass with appropriate thickness for each specific segment.</li><br/>
-    <li>Quote concludes with details of concerned accessories with specific guarantee.</li>
+    <li>Design and layout with transparent quote.</li><br/>
+    <li>Quote concludes details of safety glass opted, related accessories/structural fabrication with specific guarantee.</li>
     </ul>
 
     <h3 class="w3-xxxsmall w3-text-red">Infrastructural</h3>
     <ul style="margin-left:-20px">
-    <li>Undertaking MS,SS,aluminium,concrete,wood and other concerned surfaces-fixtures.</li><br/>
-    <li>Expertise in premium fabricational work of handrail and stair rail.</li>
+    <li>Undertaking M.S.,S.S.,Aluminium,Other metals,Concrete and Wooden structural fabrications.</li><br/>
+    <li>Expertise in premium fabricational work of customized Stair rail and Hand rail.</li>
     </ul>
 
 
     <h3 class="w3-xxxsmall w3-text-red">We Fabricate</h3>
-    <ul style="margin-left:-20px">
-    <li>Door,Partition,Shower Cabin,Pergola,Canopy,Ceiling,Stair Rail,Hand Rail,Glazing and Cladding.</li><br/>
-    <li>Toughened/Tempered,laminated,annealed,semi-tempered,ceramic and bent glass are the different types of safety glass commonly used.</li>
+    <ul style="margin-left:-20px;word-break:break-word">
+    <li>Door,Partition,Shower Cabin,Pergola,Canopy,Ceiling,Stair Rail,Hand Rail,Glazing,Cladding and Spider glass works.</li><br/>
+    <li>Safety glass variants employed are toughened/tempered,laminated,annealed,semi-tempered,ceramic and bent glass .</li>
     </ul>
 
 
@@ -107,9 +97,9 @@ body {font-size:16px;}
 
 
 
-    <h3 class="w3-xxxsmall w3-text-red">Decorative Work</h3>
+    <h3 class="w3-xxxsmall w3-text-red">Wall Decorative Work</h3>
     <ul style="margin-left:-20px">
-    <li>Image on various boards with glass and frame.</li><br/>
+    <li>Images/Artworks on various boards with glass and frame of multiple choices.</li><br/>
     <li>Customized artwork on paper,canvas and other mediums.</li><br/>
     <li>Luminous crystal signage works.</li>
     </ul>
@@ -131,22 +121,21 @@ body {font-size:16px;}
       <img src="images/showercabin.jpg" style="width:100%"  >
       <img src="images/Infrasuspendedstairs.jpg" style="width:100%"  >
       <img src="images/Woodenstairsnew.jpg" style="width:100%" > 
-      <!-- <img src="images/Infrasliding.jpg" style="width:100%" >  -->
-      <!-- <img src="images/bathroom.jpg" style="width:100%" >  -->
+      <img src="images/artwork.jpg" style="width:100%" > 
+      <img src="images/artwork2.jpg" style="width:100%" > 
+      <img src="images/artwork3.jpg" style="width:100%" > 
+      
       
     </div>
 
     <div class="w3-half">
-     <!-- <img src="images/kitchencab.jpg" style="width:100%" > -->
-      <!-- <img src="images/Kitchenceilinng.jpg" style="width:100%" > -->
-      <!-- <img src="images/ExclusiveFalseceiling.jpg" style="width:100%"> -->
-      <!-- <img src="images/InfraBedroom.jpg" style="width:100%" > -->
-      <!-- <img src="images/Woodenceiling.jpg" style="width:100%" >  --> 
       <img src="images/InfraBathro.jpg" style="width:100%" >  
-      <img src="images/Infrabathrooma.jpg" style="width:100%" >  
+      <img src="images/Infrabathrooma.jpg" style="width:100%;height:34rem" >  
       <img src="images/GlassHandrails.jpg" style="width:100%" >
       <img src="images/Stairways.jpg" style="width:100%" > 
       <img src="images/Glass-Laminative works.jpg" style="width:100%" > 
+      <img src="images/artwork4.jpg" style="width:100%" > 
+      <img src="images/artwork5.jpg" style="width:100%" > 
     </div>
   </div>
 
