--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ body {font-size:16px;}
     <h1 class="w3-xxxlarge w3-text-red"><b>About Us.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
     <ul style="margin-left:-20px">
-    <li>Managed by parent firm M/S Alpha Iris undertaking turnkey interior design project works since 2004.</li><br/>
+    <li>Managed by parent firm M/S Alpha Iris.</li><br/>
     <li>Technical know how of variant type safety glass applications with allied structural frame and frameless glass works.</li><br/>
     <li>Employing skilled labourers equipped with provisional tools and equipments.</li>
     </ul>
@@ -75,7 +75,7 @@ body {font-size:16px;}
 
     <h3 class="w3-xxxsmall w3-text-red">Infrastructural</h3>
     <ul style="margin-left:-20px">
-    <li>Undertaking M.S.,S.S.,Aluminium,Other metals,Concrete and Wooden structural fabrications.</li><br/>
+    <li>Undertaking MS,SS,Aluminium,Other metals,Concrete and Wooden structural fabrications.</li><br/>
     <li>Expertise in premium fabricational work of customized Stair rail and Hand rail.</li>
     </ul>
 
