--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ body {font-size:16px;}
     <ul style="margin-left:-20px">
     <li>Managed by parent firm M/S Alpha Iris.</li><br/>
     <li>Technical know how of variant type safety glass applications with allied structural frame and frameless glass works.</li><br/>
+    <li>Sourcing safety glass of all specifications and categories from major plants in South India.</li><br/>  
     <li>Employing skilled labourers equipped with provisional tools and equipments.</li>
     </ul>
   </div>
