--- a/index.html
+++ b/index.html
@@ -55,10 +55,11 @@ body {font-size:16px;}
     <h1 class="w3-xxxlarge w3-text-red"><b>About Us.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
     <ul style="margin-left:-20px">
-    <li>Managed by parent firm M/S Alpha Iris.</li><br/>
-    <li>Technical know how of variant type safety glass applications with allied structural frame and frameless glass works.</li><br/>
+    
+    <li>Technical knowledge of variant type safety glass applications with all related infrastructural works.</li><br/>
     <li>Sourcing safety glass of all specifications and categories from major plants in South India.</li><br/>  
-    <li>Employing skilled labourers equipped with provisional tools and equipments.</li>
+    <li>Employing skilled labourers equipped with provisional tools and equipments.</li><br/>
+    <li>Managed by parent firm M/S Alpha Iris.</li>
     </ul>
   </div>
   
@@ -68,22 +69,21 @@ body {font-size:16px;}
     <hr style="width:50px;border:5px solid red" class="w3-round">
     <h3 class="w3-xxxsmall w3-text-red">Work Format</h3>
     <ul style="margin-left:-20px">
-    <li>Evaluation of site to give the right design,drawings and specifications.</li><br/>
-    <li>Opting the right type of safety glass with appropriate thickness for each specific segment.</li><br/>
-    <li>Design and layout with transparent quote.</li><br/>
-    <li>Quote concludes details of safety glass opted, related accessories/structural fabrication with specific guarantee.</li>
+    <li>Evaluation of site for glass specifications and submission of drawings.</li><br/>
+    <li>Quote concludes cost of safety glass with accessories and structural fabrication.</li>
     </ul>
 
     <h3 class="w3-xxxsmall w3-text-red">Infrastructural</h3>
     <ul style="margin-left:-20px">
-    <li>Undertaking MS,SS,Aluminium,Other metals,Concrete and Wooden structural fabrications.</li><br/>
-    <li>Expertise in premium fabricational work of customized Stair rail and Hand rail.</li>
+    <li>Undertaking mild steel,stainless steel,concrete and wooden fabrication.</li><br/>
+    <li>Customized works of Stair rail,Hand rail,False ceiling,Cladding,Kitchen cabinet,Wardrobe,Storage cabinet,Joinery and Carpentry.</li><br/>
+    <li>Other works are .</li>
     </ul>
 
 
     <h3 class="w3-xxxsmall w3-text-red">We Fabricate</h3>
     <ul style="margin-left:-20px;word-break:break-word">
-    <li>Door,Partition,Shower Cabin,Pergola,Canopy,Ceiling,Stair Rail,Hand Rail,Glazing,Cladding and Spider glass works.</li><br/>
+    <li>Door,Partition,Shower Cabin,Pergola,Canopy,Glazing and Spider glass works.</li><br/>
     <li>Safety glass variants employed are toughened/tempered,laminated,annealed,semi-tempered,ceramic and bent glass .</li>
     </ul>
 
@@ -98,12 +98,12 @@ body {font-size:16px;}
 
 
 
-    <h3 class="w3-xxxsmall w3-text-red">Wall Decorative Work</h3>
+<!--     <h3 class="w3-xxxsmall w3-text-red">Wall Decorative Work</h3>
     <ul style="margin-left:-20px">
     <li>Images/Artworks on various boards with glass and frame of multiple choices.</li><br/>
     <li>Customized artwork on paper,canvas and other mediums.</li><br/>
     <li>Luminous crystal signage works.</li>
-    </ul>
+    </ul> -->
 
 
   </div>
