--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@ body {font-size:16px;}
     <h3 class="w3-xxxsmall w3-text-red">Infrastructural</h3>
     <ul style="margin-left:-20px">
     <li>Undertaking mild steel,stainless steel,concrete and wooden fabrication.</li><br/>
-    <li>Customized works of Stair rail,Hand rail,False ceiling,Cladding,Kitchen cabinet,Wardrobe,Storage cabinet,Joinery and Carpentry.</li><br/>
-    <li>Other works are .</li>
+    <li>Customized works of Stair rail,Hand rail,False ceiling,Cladding,Kitchen cabinet,Wardrobe,Storage cabinet,Joinery and Carpentry.</li>
+    
     </ul>
 
 
