--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@ body {font-size:16px;}
 
     <h3 class="w3-xxxsmall w3-text-red">Infrastructural</h3>
     <ul style="margin-left:-20px">
-    <li>Undertaking mild steel,stainless steel,concrete and wooden fabrication.</li><br/>
-    <li>Customized works of Stair rail,Hand rail,False ceiling,Cladding,Kitchen cabinet,Wardrobe,Storage cabinet,Joinery and Carpentry.</li>
+    <li>Undertaking mild steel, stainless steel, concrete and wooden fabrication.</li><br/>
+    <li>Customized works of stair rail, hand rail, false ceiling, cladding, kitchen cabinet, wardrobe, joinery and Carpentry.</li>
     
     </ul>
 
 
-    <h3 class="w3-xxxsmall w3-text-red">We Fabricate</h3>
+    <h3 class="w3-xxxsmall w3-text-red">Glass Work</h3>
     <ul style="margin-left:-20px;word-break:break-word">
-    <li>Door,Partition,Shower Cabin,Pergola,Canopy,Glazing and Spider glass works.</li><br/>
-    <li>Safety glass variants employed are toughened/tempered,laminated,annealed,semi-tempered,ceramic and bent glass .</li>
+    <li>Door, Partition, Shower Cabin, Pergola, Canopy, Glazing and Spider glass works.</li><br/>
+    <li>Safety glass variants employed are toughened, laminated, annealed, semi-tempered, ceramic and bent glass .</li>
     </ul>
 
 
